--- a/scss/style.css
+++ b/scss/style.css
@@ -1,7 +1,33 @@
 .navbar {
-  background-color: darkblue; }
+  color: #f1f1f1;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-flow: nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%; }
+  .navbar li {
+    background-color: darkblue;
+    text-align: center;
+    display: flex; }
+    .navbar li:nth-child(even) {
+      background-color: cadetblue; }
+    .navbar li a {
+      color: #f1f1f1;
+      padding: 10px;
+      text-decoration: none;
+      text-transform: capitalize; }
 
 body {
   display: flex;
   background: #666666;
-  color: #f1f1f1; }
+  color: #f1f1f1;
+  flex-direction: column;
+  justify-content: center; }
+
+.container {
+  width: 900px;
+  display: flex;
+  justify-content: flex-end;
+  background-color: lightblue; }
