--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,5 +6,13 @@ body {
   display : flex;
   background: $main_background_color;
   color: $main_color;
+  flex-direction: column;
+  justify-content: center;
+}
+.container {
+  width: 900px;
+  display: flex;
+  justify-content: flex-end;
+  background-color: lightblue;
 }
 
