--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,13 +6,14 @@ body {
   display : flex;
   background: $main_background_color;
   color: $main_color;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 }
 .container {
   width: 900px;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: center;
   background-color: lightblue;
 }
 
