--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -6,7 +6,6 @@
   text-align: center;
   font-size: 1.4em;
   color: #fff;
-  background-color: #666;
   padding: 20px;
   display: flex;
   cursor: pointer;
@@ -30,7 +29,6 @@
 }
 .navbar-toggle {
   color: #444;
-  background-color: #fff;
   position: absolute;
   width: 30px;
   height: 25px;
@@ -50,6 +48,11 @@
     top: 6px;
     left: 6px;
     background-color: #444;
+    -webkit-transition: all 1.3s ease;
+    -moz-transition: all 1.3s ease;
+    -ms-transition: all 1.3s ease;
+    -o-transition: all 1.3s ease;
+    transition: all 1.3s ease;
   }
   &:after {
     top: 16px;
@@ -65,16 +68,25 @@
     -ms-transform: rotate(-225deg);
     -o-transform: rotate(-225deg);
     transform: rotate(-225deg);
-    top: 0;
+    top: 15px;
+  }
+
+  &.close:after {
+    -webkit-transform: rotate(225deg);
+    -moz-transform: rotate(225deg);
+    -ms-transform: rotate(225deg);
+    -o-transform: rotate(225deg);
+    transform: rotate(225deg);
+    top: 15px;
   }
 }
 .navbar {
   opacity: 0;
-  -webkit-transition: opacity .3s linear;
-  -moz-transition: opacity .3s linear;
-  -ms-transition: opacity .3s linear;
-  -o-transition: opacity .3s linear;
-  transition: opacity .3s linear;
+  -webkit-transition: opacity 1.6s linear;
+  -moz-transition: opacity 1.6s linear;
+  -ms-transition: opacity 1.6s linear;
+  -o-transition: opacity 1.6s linear;
+  transition: opacity 1.6s linear;
   &.show {
     display: flex;
     justify-content: flex-start;
@@ -89,21 +101,24 @@
     -o-transform: translate(0px);
     transform: translate(0px);
     opacity: 1;
+
+    -webkit-transition: opacity 1.6s linear;
+    -moz-transition: opacity 1.6s linear;
+    -ms-transition: opacity 1.6s linear;
+    -o-transition: opacity 1.6s linear;
+    transition: opacity 1.6s linear;
   }
 
   li {
-    background-color: darkblue;
     text-align: center;
     display: flex;
+    -webkit-transition: all 1.3s ease;
+    -moz-transition: all 1.3s ease;
+    -ms-transition: all 1.3s ease;
+    -o-transition: all 1.3s ease;
+    transition: all 1.3s ease;
 
     &:hover {
-      background-color: cadetblue;
-    }
-    &:nth-child(even):hover {
-      background-color: darkblue;
-    }
-
-    &:nth-child(even) {
       background-color: cadetblue;
     }
 
