mobile navigation hover almost ready

--- a/index.haml
+++ b/index.haml
@@ -19,5 +19,9 @@
           %li
             %a(href="#") feedback
 
+      .navigation-panel
+        .bars
+          %span.letter.n N
+          %span.letter.v V
     %script(src="js/jquery.min.js")
     %script(src="js/myfunctions.js")
