--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,8 @@ body {
 .container {
   width: 900px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   background-color: lightblue;
 }
